Move iac dependencies into 'dependencies' directory
Iac currently depends on 'leightweight_std' and 'ftest'.
These dependencies are now stored as submodules in 'dependencies'.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "lw_std"]
-	path = lw_std
+[submodule "dependencies/ftest"]
+	path = dependencies/ftest
+	url = https://github.com/Felix-Rm/ftest.git
+[submodule "dependencies/lw_std"]
+	path = dependencies/lw_std
 	url = https://github.com/Felix-Rm/lightweight_std.git
