--- a/src/network_visualization/CMakeLists.txt
+++ b/src/network_visualization/CMakeLists.txt
@@ -1,3 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
+enable_testing()
 
-    add_library(network_visualization STATIC "network_visualization.cpp")
+add_library(network_visualization STATIC network_visualization.cpp)
