--- a/src/transport_routes/CMakeLists.txt
+++ b/src/transport_routes/CMakeLists.txt
@@ -1,6 +1,4 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 3.0)
+enable_testing()
 
-add_library(transport_routes STATIC
-    "transport_route.cpp"
-    "socket_transport_route.cpp"
-    "loopback_transport_route.cpp")
+add_library(transport_routes STATIC transport_route.cpp socket_transport_route.cpp loopback_transport_route.cpp)
