Move to json format for transmitting network state to web-visualization

--- a/src/network_visualization/CMakeLists.txt
+++ b/src/network_visualization/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required(VERSION 3.0)
 enable_testing()
 
-add_library(network_visualization STATIC network_visualization.cpp)
+add_library(network_visualization STATIC json_writer.cpp network_visualization.cpp)
+
+target_include_directories(network_visualization PRIVATE ../)
