Seperate `LocalTransportRoute` functionality from actual `read` and `write` functionality
All classes handling actual reading and writing over a connection type now inherit from
`Connection` instead of `LocalTransportRoute`.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,14 +14,15 @@ macro(IAC_BUILD target_name compile_defs)
     set(cpp_files
         "buffer_rw.cpp"
         "package.cpp"
+        "local_endpoint.cpp"
         "local_node.cpp"
         "local_node_api.cpp"
-        "local_endpoint.cpp"
+        "local_transport_route.cpp"
         "logging.cpp"
         "network.cpp"
-        "transport_routes/local_transport_route.cpp"
-        "transport_routes/socket_transport_route.cpp"
-        "transport_routes/loopback_transport_route.cpp"
+        "connection_types/connection.cpp"
+        "connection_types/socket_connection.cpp"
+        "connection_types/loopback_connection.cpp"
         "network_visualization/json_writer.cpp"
         "network_visualization/network_visualization.cpp"
     )
